plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

group ''
version '1.0-SNAPSHOT'
sourceCompatibility = '8'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
    runtimeOnly "org.openjfx:javafx-graphics:17.0.2:linux"
}

test {
    useJUnit()
}

run {
    standardInput = System.in
}

javafx {
    version = "15.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

mainClassName = 'UIMain'

task runText(type: JavaExec) {
    group 'application'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'Main'
    standardInput = System.in
}

task runFX(type: JavaExec) {
    group 'application'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'UIMain'
    jvmArgs += [
            '--add-modules',
            'javafx.controls,javafx.fxml',
            '--module-path', classpath.asPath
    ]
}